--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
   "license": "MIT",
   "dependencies": {
     "express": "^4.16.3",
+    "express-handlebars": "^3.0.0",
     "socket.io": "^2.1.0"
   }
 }
